Update to 1.2 - Port to java 8 (for spigot) - Add API to specify custom deserializer for specific parameter - Switch to kdoc - Add another example